EmrEtlRunner: replaced enrichment-specific arguments from EmrEtlRunner (#808)
EmrEtlRunner: removed %3D code following Scalding upgrade (#849)
EmrEtlRunner: fixed contract on partition_by_run (#894)
StorageLoader: bumped to 0.3.1
StorageLoader: now looking in eu-west-1 region for s3://snowplow-hosted-assets (#895)
Scala Hadoop Enrich: bumped to 0.6.0
Scala Hadoop Enrich: bumped to Scala Common Enrich 0.5.0
Scala Hadoop Enrich: bumped Scalding to 0.10.0 (#848)
Scala Hadoop Enrich: passed etl_tstamp into Scala Common Enrich (#817)
Scala Hadoop Enrich: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#835)
Scala Hadoop Enrich: removed %3D handling for compatibility with old Scalding Args (#850) 
Scala Hadoop Enrich: added ability to download additional MaxMind databases (#885)
Scala Common Enrich: bumped to 0.5.0
Scala Common Enrich: bumped user-agent-utils version, thanks @pkallos! (#662)
Scala Common Enrich: bumped referer-parser to 0.2.0 (#864)
Scala Common Enrich: bumped httpclient to 4.3.3 (#897)
Scala Common Enrich: bumped scala-maxmind-geoip to scala-maxmind-iplookups 0.1.0 (#882)
Scala Common Enrich: stored etl_tstamp in new field in CanonicalOutput (#818)
Scala Common Enrich: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#836)
Scala Common Enrich: made referer parsing configurable with list of internal domains (#857)
Scala Common Enrich: migrated configurable enrichments to new EnrichmentRegistry (#858)
Scala Common Enrich: added validation of enrichments JSON (#807)
Scala Common Enrich: replaced "anon_ip_quartets" with "anon_ip_octets" everywhere (#547)
Scala Common Enrich: added ability to extract event_id from querystring (#723)
Scala Common Enrich: extracted CanonicalInput's userId as network_userid, thanks @pkallos! (#855)
Scala Common Enrich: added MaxMind region_name field (#873)
Scala Common Enrich: added IP -> ISP lookup (#861)
Scala Common Enrich: added IP -> organization lookup (#887)