@@ -10,8 +10,10 @@ EmrEtlRunner: fixed contract on partition_by_run (#894)
 StorageLoader: bumped to 0.3.1
 StorageLoader: now looking in eu-west-1 region for s3://snowplow-hosted-assets (#895)
 Scala Hadoop Enrich: bumped to 0.6.0
-Scala Hadoop Enrich: bumped to Scala Common Enrich 0.5.0
-Scala Hadoop Enrich: bumped Scalding to 0.10.0 (#848)
+Scala Hadoop Enrich: bumped Scala to 2.10.4 (#912)
+Scala Hadoop Enrich: bumped Scalding to 0.11.1 (#911)
+Scala Hadoop Enrich: bump Hadoop to 1.2.1 (#913)
+Scala Hadoop Enrich: bumped to Scala Common Enrich 0.5.0 (#788)
 Scala Hadoop Enrich: passed etl_tstamp into Scala Common Enrich (#817)
 Scala Hadoop Enrich: removed event_vendor and ue_name and renamed ue_properties to unstruct_event (#835)
 Scala Hadoop Enrich: removed %3D handling for compatibility with old Scalding Args (#850) 
